force-app/main/default/objects/Solution_Provider_Relationship__c/Solution_Provider_Relationship__c.object-meta.xml
<CustomObject>
    <label>Solution Provider Relationship</label>
    <nameField>
        <displayFormat>SPR-{0000000}</displayFormat>
        <label>Solution Provider Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Provider Relationship</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>