force-app/main/default/objects/Solution_Provider_Relationship__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <formula>Solution_Provider_Product__r.Solution_Provider_Id__r.Name</formula>
    <label>Provider Name</label>
    <type>Text</type>
</CustomField>