force-app/main/default/objects/Solution_Provider_Relationship__c/fields/Solution_Provider__c.field-meta.xml
<CustomField>
    <fullName>Solution_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the solution provider to limit the number of choices available in the Solution Provider Product list</inlineHelpText>
    <label>Solution Provider</label>
    <referenceTo>Solution_Provider__c</referenceTo>
    <relationshipLabel>Solution Provider Relationship</relationshipLabel>
    <relationshipName>Solution_Provider_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>