force-app/main/default/objects/Solution_Provider_Relationship__c/fields/Solution_Provider_Product__c.field-meta.xml
<CustomField>
    <fullName>Solution_Provider_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to target which of a SP products this refers to</description>
    <label>Solution Provider Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Solution_Provider_Product__c.Solution_Provider_Id__c</field>
            <operation>equals</operation>
            <valueField>$Source.Solution_Provider__c</valueField>
        </filterItems>
        <filterItems>
            <field>Solution_Provider_Product__c.Internal_Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Solution_Provider_Product__c</referenceTo>
    <relationshipLabel>Solution Provider Relationship</relationshipLabel>
    <relationshipName>Solution_Provider_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>